Fixed nav menu height bug on mobile and remove nav menu on scroll

--- a/style.css
+++ b/style.css
@@ -464,7 +464,6 @@ animation: cta-tel-shake 2.2s ease-in-out 2s infinite;
 }
 .nav-flex-container{
     background-color: white ;
-    height: 100svh;
     min-height: 100svh;
     width: 600px;
     max-width: 100%;
